Fixes low contrast for body text.

--- a/app/styles.css
+++ b/app/styles.css
@@ -25,7 +25,7 @@ body {
   /*margin: 2em; */
 }
 body, input[text], button {
-  color: #888;
+  color: #595959;
   font-family: 'Work Sans', sans-serif;
 }
 a {
